# resumer

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/: CODEOWNERS
app/: __init__.py  job_finder.py
app/interfaces/: __init__.py  linkedin_job.py
config/: __init__.py  config.py  injector.py
database/: connection.py
docker/: docker-compose.yml
integrations/: __init__.py
integrations/linkedin/: constants.py  crawler.py
integrations/openai/: client.py
