[tool.poetry]
name = "resumer"
version = "0.1.0"
description = ""
authors = ["Bruno Tatsuya <brunomasunaga@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
inject = "^5.2.1"
pydantic = "^2.9.1"
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"