[tool.poetry]
name = "resumer"
version = "0.1.0"
description = ""
authors = ["Bruno Tatsuya <brunomasunaga@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
inject = "^5.2.1"
pydantic = "^2.9.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
selenium = "^4.24.0"
chromedriver-autoinstaller = "^0.6.4"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.9"
openai = "^1.46.0"
pydantic-settings = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"